--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
     "package.json": true,
     "README.md": true,
     "yarn.lock": true,
-    "src/index.js": false,
+    "src/index.js": true,
+    "jsconfig.json": true,
+    "src/components/Atoms/code-tokens-colors.txt": true,
   },
   "cSpell.ignoreWords": [
     "GITHUBLINK",
