--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     "package.json": true,
     "README.md": true,
     "yarn.lock": true,
-    "src/index.js": true,
+    "src/index.js": false,
     "jsconfig.json": true,
     "src/components/Atoms/code-tokens-colors.txt": true,
   },
