--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prismjs": "1.28.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "4.3.1",
     "react-scripts": "5.0.1",
     "react-simple-code-editor": "0.11.0",
