--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     "public": true,
     ".gitignore": true,
     "package-lock.json": true,
-    "package.json": true,
+    "package.json": false,
     "README.md": true,
     "yarn.lock": true,
     "src/index.js": false,
