--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,10 @@
     "public": true,
     ".gitignore": true,
     "package-lock.json": true,
-    "package.json": false,
+    "package.json": true,
     "README.md": true,
     "yarn.lock": true,
-    "src/index.js": false,
+    "src/index.js": true,
     "jsconfig.json": true,
     "src/components/Atoms/code-tokens-colors.txt": true,
   },
