--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "4.3.1",
+    "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-code-editor": "0.11.0",
     "styled-components": "5.3.5"
