Safari no soporta lookbehind in regex

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     ".gitignore": true,
     "package-lock.json": true,
     "package.json": true,
-    "README.md": true,
+    "README.md": false,
     "yarn.lock": true,
     "jsconfig.json": true,
     "src/components/Atoms/code-tokens-colors.txt": true,
