--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,12 @@
     ".gitignore": true,
     "package-lock.json": true,
     "package.json": true,
-    "README.md": false,
+    "README.md": true,
     "yarn.lock": true,
     "jsconfig.json": true,
     "src/components/Atoms/code-tokens-colors.txt": true,
+    // Project Only
+    "src/pages/LexicalAnalyzer": true,
+    "src/components/Custom": true,
   },
 }
