--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "dependencies": {
     "@fontsource/raleway": "4.5.5",
-    "prismjs": "1.28.0",
+    "prismjs": "^1.28.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "4.3.1",
-    "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
-    "react-simple-code-editor": "0.11.0",
+    "react-simple-code-editor": "^0.11.2",
     "styled-components": "5.3.5"
   },
   "scripts": {
@@ -37,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-macros": "^3.1.0"
   }
 }
