--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,27 @@
     "babel-plugin-macros.config.js": true,
     ".gitignore": true,
     "src/utilities/tokensClaros.txt": true,
+    // 
+    "src/components/Atomos/BotonAbrir.jsx": true,
+    "src/components/Atomos/BotonBorrar.jsx": true,
+    "src/components/Atomos/BotonCopiar.jsx": true,
+    "src/components/Atomos/BotonDescargar.jsx": true,
+    "src/components/Atomos/EditorDeCodigo.jsx": true,
+    "src/components/Atomos/_ErroresSintacticos.js": true,
+    "src/components/Atomos/LinkGithub.jsx": true,
+    "src/components/Atomos/NombreArchivo.jsx": true,
+    "src/components/Atomos/Notificador.jsx": true,
+    "src/components/Atomos/Tabla.jsx": true,
+    "src/components/Atomos/TemaSwitch.jsx": true,
+    "src/components/Moleculas": true,
+    "src/components/Organismos": true,
+    "src/components/StyledComponents.js": true,
+    "src/context/CtxTema.jsx": true,
+    "src/hooks/useArchivo.js": true,
+    "src/utilities/coloresTemas.js": true,
+    "src/utilities/tokensOscuros.js": true,
+    "src/App.js": true,
+    "src/estilosGlobales.js": true,
+    "src/index.js": true,
   },
 }
