--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-icons": "4.3.1",
     "react-scripts": "5.0.1",
     "react-simple-code-editor": "^0.11.2",
-    "styled-components": "5.3.5"
+    "styled-components": "5.3.5",
+    "uniqid": "^5.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
